--- a/style/standart.css
+++ b/style/standart.css
@@ -1,35 +1,60 @@
-*{
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
-    text-decoration: none;
+* {
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  text-decoration: none;
 }
 
-body{
-    font-family: 'Inter', sans-serif;
-    flex-direction: column;
+:root {
+  --summary-color: #f6f7f8;
+  --header-color: #ffffff;
+  --side-color: #2a3647;
+  --side-active-color: #091931;
+  --text-color: #000000;
+  --inter-text-color: #2a3647;
+  --inter-text-accent-color: #29abe2;
+  --seperator-color: #d1d1d1;
+
+  --weight-100: 100;
+  --weight-400: 400;
+  --weight-500: 500;
+  --weight-600: 600;
+  --weight-700: 700;
+
+  --font-size-16: 16px;
+  --font-size-20: 20px;
+  --font-size-21: 21px;
+  --font-size-27: 27px;
+  --font-size-47: 47px;
+  --font-size-61: 61px;
+  --font-size-64: 64px;
 }
 
-.layout{
-    display: flex;
-    width: 100%;
-    max-width: 1440px;
+body {
+  font-family: "Inter", sans-serif;
+  flex-direction: column;
 }
 
-nav{
-    height: 100vh;
-    background-color: #2A3647;
-    width: 232px;
+.layout {
+  display: flex;
+  width: 100%;
+  /* max-width: 1440px; */
 }
 
-main{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    background-color: rgba(246, 247, 248, 1);
+nav {
+  height: 100vh;
+  background-color: #2a3647;
+  width: 232px;
 }
 
-.main-header{
+main {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: rgba(246, 247, 248, 1);
+}
+
+.main-header {
   width: 100%;
   height: 96px;
   background-color: var(--header-color);
@@ -40,30 +65,30 @@ main{
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
 }
 
-h2{
-    font-size: 61px;
-    font-weight: 700;
+h2 {
+  font-size: 61px;
+  font-weight: 700;
 }
 
-h4{
-    font-size: 20px;
-    font-weight: 700;
-    color: rgba(66, 82, 110, 1);
+h4 {
+  font-size: 20px;
+  font-weight: 700;
+  color: rgba(66, 82, 110, 1);
 }
 
-h5{
-    font-size: 16px;
-    font-weight: 700;
+h5 {
+  font-size: 16px;
+  font-weight: 700;
 }
 
-.d_none{
-    display: none;
+.d_none {
+  display: none;
 }
 
 @font-face {
-  font-family: 'Inter';
-  src: url('../fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype'),
-       url('../fonts/Inter-Italic-VariableFont_opsz,wght.ttf') format('truetype');
+  font-family: "Inter";
+  src: url("../fonts/Inter-VariableFont_opsz,wght.ttf") format("truetype"),
+    url("../fonts/Inter-Italic-VariableFont_opsz,wght.ttf") format("truetype");
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
