--- a/style/style.css
+++ b/style/style.css
@@ -4,3 +4,5 @@
 @import url(./navbar.css);
 @import url(./contacts.css);
 @import url(./task_overlay.css);
+@import url(./header.css);
+@import url(./main.css);
