--- a/style/summary.css
+++ b/style/summary.css
@@ -1,284 +1,28 @@
-:root {
-  --summary-color: #f6f7f8;
-  --header-color: #ffffff;
-  --side-color: #2a3647;
-  --side-active-color: #091931;
-  --text-color: #000000;
-  --inter-text-color: #2a3647;
-  --inter-text-accent-color: #29abe2;
-  --seperator-color: #D1D1D1;
-}
-
-body {
-  width: 100%;
-  margin: 0;
-  background-color: var(--summary-color);
-}
-
-/** Summary Page Styles **/
-.summary-text-1 {
-  font-family: "Inter", serif;
-  font-weight: 400;
-  font-style: bold;
-  font-size: 20px;
-  color: var(--text-color);
+.summary-board-container{
+  width: 550px;
+  height: auto;
   display: flex;
   justify-content: center;
-  text-align: center;
-}
-.summary-text-2 {
-  font-family: "Inter", serif;
-  font-weight: 400;
-  font-style: normal;
-  color: var(--inter-text-color);
-  gap: 13px;
-}
-.summary-text-3 {
-  font-family: "Inter", serif;
-  font-weight: 500;
-  font-style: normal;
-  color: var(--inter-text-color);
-}
-.summary-text-4 {
-  font-family: "Inter", serif;
-  font-weight: 700;
-  font-style: Bold;
-  color: var(--inter-text-accent-color);
-}
-.summary-text-5{
-  font-family: "Inter", serif;
-  font-weight: 600;
-  font-style: normal;
-  font-size: 64px;
-  color: var(--text-color);
-}
-.summary-text-6{
-  font-family: "Inter", serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 20px;
-  color: var(--text-color);
-}
-.summary-text-7{
-  font-family: "Inter", serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 16px;
-  color: var(--text-color);
-}
-.summary-text-8{
-  font-family: "Inter", serif;
-  font-weight: 700;
-  font-weight: bold;
-  font-size: 21px;
-  color: var(--side-active-color);
-}
-.summary-text-9{
-  font-family: "Inter", serif;
-  font-weight: 700;
-  font-size: 21px;
-  color: var(--inter-text-color);
-  align-items: start;
+  flex-direction: column;
+  gap: 32px;
+  margin-top: 50px;
 }
 
-.summary-title {
+.summary-board-panels{
   width: 100%;
-  margin: 0px;
-  padding: 0;
-  margin-top: 80px;
-  padding-left: 448px;
-}
-
-.summary-header {
-  width: 100%;
-  height: 96px;
-  background-color: var(--header-color);
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  isolation: isolate;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
-}
-
-.summary-header-text {
-  font-family: "Inter", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 20px;
-  color: var(--text-color);
-  margin-left: 348px;
-}
-#summary-title-360{
-  font-size: 61px;
-  font-weight: 700;
-}
-.summary-title-text {
-  font-family: "Inter", serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 27px;
-  color: var(--text-color);
-  display: flex;
-  align-items: center;
-  gap: 24px;
-}
-.summary-title-separator-blue{
-  width: 0px;
-  height: 59px;
-  border: 2px solid var(--inter-text-accent-color);
-  border-radius: 3px;
-}
-.summary-title-separator-grey{
-  width: 0px;
-  height: 102px;
-  border: 2px solid var(--seperator-color);
-  border-radius: 3px;
-}
-
-/*** Board Overview Section ***/
-.summary-board-overview {
-  width: 560px;
-  height: auto;
-}
-.summary-board-overview-row-1 {
-  display: flex;
-  justify-content: space-between;
   gap: 32px;
 }
-.summary-board-overview-todo {
-  width: 100%;
-  height: 168px;
-  border-radius: 20px;
-  background-color: var(--header-color);
-  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(0, 0, 0, 0.08);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.summary-board-overview-done {
-  width: 100%;
-  height: 168px;
-  border-radius: 20px;
-  background-color: var(--header-color);
-  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(0, 0, 0, 0.08);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.summary-board-overview-row-2 {
-  margin-top: 32px;
-}
-.urgent-content{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 64px;
-}
-.summary-board-overview-urgent {
-  width: 100%;
-  height: 168px;
-  border-radius: 20px;
-  background-color: var(--header-color);
-  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(0, 0, 0, 0.08);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.summary-board-overview-row-3 {
-  margin-top: 32px;
-  display: flex;
-  justify-content: center;
-  gap: 32px;
-}
-.summary-board-overview-tasks-in-board {
-  width: 100%;
-  height: 168px;
-  border-radius: 20px;
-  background-color: var(--header-color);
-  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(0, 0, 0, 0.08);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.summary-board-overview-tasks-in-progress {
-  width: 100%;
-  height: 168px;
-  border-radius: 20px;
-  background-color: var(--header-color);
-  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(0, 0, 0, 0.08);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.summary-board-overview-awaiting-feedback {
-  width: 100%;
-  height: 168px;
-  border-radius: 20px;
-  background-color: var(--header-color);
-  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(0, 0, 0, 0.08);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-/** ToDo Card Styles ***/
-.todo-content{
-  display: flex;
-  justify-content: space-between;
-  gap: 16px;
-  align-items: center;
-} 
-.summary-content{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 80px;
-  margin-left: 348px;
-}
-.summary-greetings{
-  font-family: "Inter", serif;
-  font-weight: 500;
-  font-style: normal;
-  font-size: 47px;
-  color: var(--text-color);
-  margin-left: 150px;
-}
-#summary-greetings-name{
-  font-family: "Inter", serif;
-  font-weight: 700;
-  font-style: bold;
-  font-size: 64px;
-  color: var(--inter-text-accent-color);
-}
 
-/** Profile Header Styles **/
-.summary-profil{
+.summary-board-panel{
+  width: 100%;
+  height: 168px;
+  border-radius: 20px;
+  background-color: var(--header-color);
+  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.08);
   display: flex;
-  gap: 16px;
-  margin-right: 50px;
-}
-
-.profil-header{
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  background-color: white;
-  border: 2px solid black;
-  top: 28px;
-  right: 48px;
-  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
-.summary-help{
-  width: 20px;
-  height: auto;
-}
