--- a/style/contacts.css
+++ b/style/contacts.css
@@ -6,28 +6,12 @@ body {
     overflow: hidden;
 }
 
-.contact-area {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    height: 100vh;
-    width: 100%;
-}
-
-.content-area {
-    width: 100%;
-    max-height: 1024px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-
-.content-limit {
-    width: calc(1440px - 232px);
-}
-
 .content-limit-header {
-    max-width: calc(1440px - 232px) ;
+    max-width: calc(1440px - 232px);
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .contacts-main-content {
@@ -37,28 +21,17 @@ body {
     background-color: rgba(246, 247, 248, 1);
 }
 
-.main-contacts-header {
-    width: 100%;
-    height: 96px;
-    background-color: #ffffff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
-}
-
 .contacts-content {
     flex: 1;
     display: flex;
 }
 
 .contact-list-area {
-    width: 40%;
+    width: 456px;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: calc(100vh - 96px);
-    max-height: calc(1024px - 96px);
     overflow-y: auto;
     scrollbar-width: thin;
     background-color: #FFFFFF;
@@ -66,7 +39,7 @@ body {
 }
 
 .contact {
-    width: 60%;
+    width: calc(1440px - (232px + 456px));
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -74,7 +47,7 @@ body {
 }
 
 .contact-list-content {
-    width: 80%;
+    width: 90%;
     display: flex;
     flex-direction: column;
 }
