--- a/style/board.css
+++ b/style/board.css
@@ -196,8 +196,8 @@
 
 .task-desc{
     display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;  
+    line-clamp: 2;
+    box-orient: vertical;  
     overflow: hidden;
     font-size: 16px;
     color: rgba(168, 168, 168, 1);
@@ -243,11 +243,13 @@
     width: 32px;
     background-color: rgba(255, 122, 0, 1);
     border: 2px solid white;
-    border-radius: 50%;
+    border-radius: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-left: -8px;
+    font-size: 12px;
+    color: white;
 }
 
 .user-logo:first-child {
