--- a/style/contacts.css
+++ b/style/contacts.css
@@ -36,20 +36,50 @@ body {
     scrollbar-width: thin;
     background-color: #FFFFFF;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+    position: relative;
+
 }
 
 .contact {
     width: calc(1440px - (232px + 456px));
     display: flex;
-    flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
 }
 
-.contact-list-content {
-    width: 90%;
+.contact-rightside-big-container {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-left: 55px;
+}
+
+.contact-list-container {
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    padding: 0 24px 32px;
+}
+
+.contact-list-content {
+    width: 352px;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-list {
+    margin-top: 84px;
+}
+
+.add-new-contact-btn-container {
+    width: 352px;
+    height: 100px;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFFFF;
 }
 
 .add-new-contact-btn {
@@ -61,9 +91,9 @@ body {
     justify-content: center;
     border: 1px solid #2A3647;
     border-radius: 10px;
-    margin: 22.5px 0;
     padding: 12px 12px;
     gap: 16px;
+    width: 352px;
     font-size: 21px;
     font-weight: 700;
 }
@@ -92,13 +122,18 @@ body {
 .contact-list-section-head {
     font-weight: 400;
     color: #000000;
-    padding: 0px 36px;
+    padding: 17px 36px;
     height: 58px;
     align-content: center;
 }
 
+.section-seperator-container {
+    padding: 8px 0;
+    height: 16px;
+}
+
 .section-seperator {
-    border: 1px solid #d1d1d1;
+    border-bottom: 1px solid #D1D1D1;
     border-radius: 3px;
 }
 
@@ -142,10 +177,9 @@ body {
 
 .contacts-header {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    margin-left: 24px;
-    width: 80%;
+    width: 569px;
     height: 73px;
     gap: 30px;
     margin-top: 110px;
@@ -168,16 +202,28 @@ body {
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
+    margin-left: 7px;
     gap: 21px;
-    margin-left: 48px;
     margin-top: 32px;
+    position: relative;
+}
+
+.contact-info-big-container {
+    width: calc(1440px - (232px + 456px));
+    position: absolute;
+    animation: contactTemplate 300ms linear forwards;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 21px;
 }
 
 .contact-info-big {
     display: flex;
     align-items: center;
     gap: 54px;
-
+    width: 100%;
 }
 
 .svg-img-big {
@@ -274,4 +320,14 @@ body {
 
 .contact-informations-phone-number {
     font-weight: 400;
+}
+
+@keyframes contactTemplate {
+    0% {
+        left: 100vw;
+    }
+
+    100% {
+        left:0;
+    }
 }
