--- a/style/standart.css
+++ b/style/standart.css
@@ -61,8 +61,50 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  isolation: isolate;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+header {
+  width: 100%;
+  height: 96px;
+  background-color: var(--header-color);
+  display: flex;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+.content-limit-header {
+  max-width: calc(1440px - 232px);
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-text {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
+  color: var(--text-color);
+  margin-left: 120px;
+}
+
+.header-profil{
+  display: flex;
+  gap: 16px;
+  margin-right: 50px;
+}
+
+.profil-header{
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background-color: white;
+  border: 2px solid black;
+  top: 28px;
+  right: 48px;
+  display: flex;
+  align-items: center;
 }
 
 h2 {
