--- a/style/login.css
+++ b/style/login.css
@@ -4,7 +4,7 @@ body {
 }
 
 /* animation overlay design and align */
-.overlay {
+.overlay_animation {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -17,7 +17,7 @@ body {
 }
 
 /* animation join logo design and align */
-.overlay .animation_join_logo {
+.overlay_animation .animation_join_logo {
     position: relative;
     display: flex;
     justify-content: center;
@@ -104,7 +104,7 @@ main {
 }
 
 /* login section header align */
-.login_section header {
+.login_section .title_headline {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -112,7 +112,7 @@ main {
 }
 
 /* login section header h1 style */
-.login_section header h1 {
+.login_section .title_headline h1 {
     margin: 0;
     font-weight: 700;
     font-style: bold;
