--- a/style/sign_up.css
+++ b/style/sign_up.css
@@ -12,7 +12,7 @@
 }
 
 /* sign up section header align */
-.sign_up_section header {
+.sign_up_section .title_headline {
     display: flex;
     align-items: center;
     position: relative;
@@ -33,16 +33,16 @@
     border-radius: 42px;
 }
 
-/* sign up section header h1 and underline align */
-.sign_up_section header .sign_up_logo {
+/* sign up section title_headline h1 and underline align */
+.sign_up_section .title_headline .sign_up_logo {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 16px;
 }
 
-/* sign up section header h1 style */
-.sign_up_section header h1 {
+/* sign up section title_headline h1 style */
+.sign_up_section .title_headline h1 {
     margin: 0;
     font-weight: 700;
     font-style: bold;
