--- a/style/add_task.css
+++ b/style/add_task.css
@@ -20,11 +20,9 @@
 
 .form_wrapper {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   width: 80%;
-  margin-left: 10%;
-  margin-top: 20px;
+  margin: 20px 0 0 10%;
 }
 
 .z1 {
@@ -44,9 +42,7 @@
 }
 
 .ad>h2 {
-  margin-top: 80px;
-  margin-bottom: 40px;
-  margin-left: 10%;
+  margin: 80px 0 40px 10%;
 }
 
 .ad{
@@ -62,7 +58,6 @@
 
 .priority_wrapper button {
   display: flex;
-  flex-direction: row;
   align-items: center;
   width: 30%;
   justify-content: center;
@@ -71,7 +66,6 @@
 
 .priority_wrapper {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   width: 100%;
 }
@@ -79,7 +73,6 @@
 .priority_wrapper button {
   font-family: Inter;
   font-weight: 400;
-  font-style: Regular;
   font-size: 20px;
   background: #ffffff;
   cursor: pointer;
@@ -112,7 +105,6 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   display: inline-block;
   font-family: Inter;
   font-weight: 400;
-  font-style: Regular;
   font-size: 20px;
   line-height: 120%;
   margin-bottom: 8px;
@@ -123,7 +115,6 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   font-weight: 400;
   font-style: Regular;
   font-size: 20px;
-
   line-height: 120%;
   letter-spacing: 0%;
 }
@@ -131,10 +122,7 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
 .ad input {
   width: 100%;
   opacity: 1;
-  padding-top: 12px;
-  padding-right: 21px;
-  padding-bottom: 12px;
-  padding-left: 21px;
+  padding: 12px 21px;
   gap: 10px;
   border-radius: 10px;
   border-width: 1px;
@@ -150,10 +138,6 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   width: 100%;
   height: 120px;
   opacity: 1;
-  /* padding-top: 12px;
-  padding-right: 21px;
-  padding-bottom: 12px;
-  padding-left: 21px; */
   padding: 12px 21px;
   gap: 10px;
   border-radius: 10px;
@@ -162,7 +146,6 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   outline: none;
   font-family: Inter;
   font-weight: 400;
-  font-style: Regular;
   font-size: 20px;
   line-height: 120%;
   letter-spacing: 0%;
@@ -215,10 +198,7 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   width: 100%;
   justify-content: space-between;
   opacity: 1;
-  padding-top: 12px;
-  padding-right: 16px;
-  padding-bottom: 12px;
-  padding-left: 16px;
+  padding: 12px 16px;
   border-radius: 10px;
   border-width: 1px;
   border: 1px solid #d1d1d1;
@@ -226,20 +206,15 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
 
 .ad hr {
   width: 0px;
-
   opacity: 1;
   border-width: 1px;
   border: 1px solid #d1d1d1;
-  margin-left: 3%;
-  margin-right: 3%;
+  margin: 0 3%;
 }
 
 .ad button {
   opacity: 1;
-  padding-top: 16px;
-  padding-right: 10px;
-  padding-bottom: 16px;
-  padding-left: 10px;
+  padding: 16px 10px;
   gap: 8px;
   border-radius: 10px;
 }
@@ -257,16 +232,13 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: 3%;
+  white-space: nowrap;
+  font-size: 21px;
 }
 
 .submit_butn_wrapper {
   display: flex;
-}
-
-.submit_container button {
-  margin-left: 3%;
-  white-space: nowrap;
-  font-size: 21px;
 }
 
 .clear_btn {
@@ -406,7 +378,6 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
 
 .single_contact div {
   display: flex;
-  flex-direction: row;
   align-items: center;
   color: inherit;
 }
@@ -465,10 +436,7 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
 
 .contacts li {
   opacity: 1;
-  padding-top: 16px;
-  padding-right: 10px;
-  padding-bottom: 16px;
-  padding-left: 10px;
+  padding: 16px 10px;
   gap: 8px;
   border-radius: 10px;
   margin-bottom: 1px;
@@ -540,10 +508,7 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
 
 .category_wrapper option {
   opacity: 1;
-  padding-top: 16px;
-  padding-right: 10px;
-  padding-bottom: 16px;
-  padding-left: 10px;
+  padding: 16px 10px;
   gap: 8px;
   border-radius: 10px;
 }
@@ -579,7 +544,6 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
 
 .subtask_item_wrapper {
   display: flex;
-  flex-direction: row;
   align-items: center;
   width: 47%;
   padding-left: 16px;
@@ -592,7 +556,6 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
 
 .subtask_item_edit {
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   width: 56px;
@@ -629,7 +592,6 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
 
 .subtask_input_button {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 56px;
@@ -659,7 +621,6 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
 
 .required_info {
   display: flex;
-  flex-direction: row;
   font-size: 20px;
 }
 
