--- a/style/contacts_responsive.css
+++ b/style/contacts_responsive.css
@@ -1,39 +1,189 @@
-
 @media (max-width:1400px) {
     .navbar {
-    width: 15%;
+        width: 16%;
+    }
+
+    .contacts-main-content {
+        width: 84%;
+    }
+
+    /* main without header */
+    .contacts-content {
+        width: 100%;
+    }
+
+    /* left side / contact-list */
+
+    .contact-list-area {
+        width: 38%;
+    }
+
+    .add-new-contact-btn {
+        width: 88%;
+    }
+
+    .contact-list-container {
+        width: 88%;
+    }
+
+    .contact-list-content {
+        width: 100%;
+    }
+
+
+    /* right side / contact + template */
+
+    .contact {
+        width: 62%;
+    }
+
+    .contacts-header {
+        width: 100%;
+    }
+
+    .contact-info-big-container {
+        width: 100%;
+    }
+
+    .contact-template {
+        width: 100%;
+    }
+
+    .succes-created-container {
+        width: 100%;
+    }
+
+    /* overlay-Template*/
+
+    .overlay-card {
+        width: 80%;
+    }
+
+    @keyframes fadeIn {
+
+        0% {
+            left: 100%;
+        }
+
+        100% {
+            left: 10%;
+        }
+    }
+
+    /* Overlay- left-Side*/
+    .overlay-left-side {
+        width: 39%;
+    }
+
+    .add-contact-card-title {
+        height: 56px;
+        font-size: var(--font-size-47);
+    }
+
+    .add-contact-card-txt {
+        font-size: var(--font-size-20);
+    }
+
+    .add-contact-card-svg {
+        height: auto;
+        width: 55.6px;
+    }
+
+    .create-form>section>div>label>input {
+        width: 67%;
+    }
+
+    .overlay-right-side {
+        width: 61%;
+    }
 }
 
-.contacts-main-content {
-    width: 85%;
-}
 
-.contacts-content {
-    width: 100%;
-}
+@media (max-width:1350px) {
+    /* body {
+        overflow-y: scroll;
+    } */
 
-.contact-list-area {
-    width: 40%;
-}
+    .layout {
+        flex-direction: column-reverse;
+    }
+
+    .contacts-main-content {
+        width: 100%;
+    }
+
+    .content-limit-header {
+        max-width: 100%;
+
+    }
+
+    /* Navbar */
+
+    .navbar {
+        height: 80px;
+        width: 100%;
+        padding: 0 16px;
+        position: fixed;
+        bottom: 0;
+    }
+
+    .succes-created-container {
+        margin-top: 64px;
+    }
+
+    .navbar-content-limiter {
+        flex-direction: row;
+    }
+
+    .navbar-logo {
+        display: none;
+    }
+
+    .nav-list {
+        flex-direction: row;
+        height: 100%;
+    }
+
+    .navbar-link-content {
+        justify-content: center;
+    }
+
+    .nav-list li {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
+        height: 100%;
+    }
+
+    .navbar-link {
+        height: 100%;
+        border-radius: 16px;
+    }
+
+    .navbar-footer {
+        display: none;
+    }
+
+    .contact-list-area {
+        height: calc(100vh - (96px + 80px));
+    }
 
 
-.contact {
-    width: 60%;
-}
+    /*Overlay*/
 
-.contacts-header {
-    width: 90%;
-}
+    .overlay-right-side {
+        position: relative;
+    }
 
-.contact-info-big-container {
-    width: 100%;
-}
+    .overlay-character-icon {
+        position: absolute;
+        left: 0;
+        transform: translateX(-50%);
+    }
 
-.contact-template {
-    width: 100%;
-}
+    .add-contact-content-container {
+        width: 77%;
+    }
 
-.succes-created-container {
-    width: 100%;
-}
 }
