--- a/style/navbar.css
+++ b/style/navbar.css
@@ -4,16 +4,10 @@
     background-color: #2A3647;
     /* min-width: 232px; */
     width: 232px;
-}
-
-.navbar-content-limiter {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    height: 100vh;
-    max-height: 1300px;
 }
 
 .navbar-logo {
@@ -37,29 +31,23 @@
 
 .navbar-link {
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 8px;
     color: white;
     width: 100%;
     height: 46px;
+    padding: 8px 56px;
+    gap: 8px;
+    font-size: 16px;
 }
 
-.navbar-link-content {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    gap: 8px;
-    padding: 8px 56px;
+.category-logo {
+    width: 32px;
+    height: 32px;
 }
 
 .navbar-link:hover:not(.navbar-active) {
     background-color: #2A3D59;
-}
-
-.navbar_img {
-    width: 30px;
-    height: 30px;
 }
 
 .navbar-footer {
@@ -69,38 +57,40 @@
     justify-content: flex-end;
     gap: 8px;
     height: 245px;
+    width: 100%;
+}
+
+.navbar-footer li{
+    display: flex;
+    align-items: center;
+    width: 100%;
 }
 
 .navbar-footer a {
     color: #A8A8A8;
-    height: 35px;
+    padding: 8px;
+    margin-left:  52px;
 }
 
 .navbar-footer-link:hover {
     color: #29ABE2;
 }
 
-.navbar-footer-link p {
-    height: 35px;
-    padding: 8px;
-}
-
 .navbar-active {
     background-color: #091931;
     pointer-events: none;
     cursor: default;
-
 }
 
 @media (max-width: 800px) {
     .navbar {
         padding: 0;
-        height: auto;
+        height: 80px;
         width: 100%;
         position: fixed;
         bottom: 0;
+        display: flex;
     }
-
 
     .navbar-content-limiter {
         flex-direction: row;
@@ -115,8 +105,9 @@
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
-        gap: 15px;
+        gap: 0;
         width: 100%;
+        height: 80px;
     }
 
     .navbar-footer {
@@ -127,16 +118,6 @@
         display: none;
     }
 
-    .navbar-link-content {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        width: 76px;
-        height: 76px;
-        padding: 0;
-        border-radius: 16px;
-    }
-
     .nav-list li {
         flex-direction: column;
         width: 76px;
@@ -145,10 +126,18 @@
     }
 
     .navbar-link {
-        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        border-radius: 16px;
+        font-size: 14px;
     }
 
-    .navbar-active{
+    .navbar-active {
         border-radius: 16px;
     }
 
